--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -8,6 +8,9 @@ font = "sans serif"
 [server]
 headless = false
 port = 8501
+maxUploadSize = 200
+enableCORS = false
+enableXsrfProtection = false
 
 [browser]
 gatherUsageStats = false
