Prepare MVP for deployment - Clean codebase, fix bugs, add equity features

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
-streamlit==1.31.0
-sentence-transformers==2.3.1
-spacy==3.7.2
-scikit-learn==1.4.0
-numpy==1.26.3
-pandas==2.2.0
+streamlit==1.50.0
+sentence-transformers==5.1.2
+scikit-learn==1.6.1
+numpy==1.26.4
+pandas==2.2.2
 PyPDF2==3.0.1
-python-docx==1.1.0
-reportlab==4.0.9
-fpdf==1.7.2
-Pillow==10.2.0
+python-docx==1.2.0
+reportlab==4.4.4
+torch==2.9.0
+transformers==4.57.1
